--- a/ToDo
+++ b/ToDo
@@ -1,6 +1,7 @@
 Task in the project elm (S4)
 ------------------------
 
-1. Create the main classes
-2. Define the attributes, slots, methods...
-3. Define the functions in C++ for the training system.
+1. Create the main classes SLFN and ELM
+2. Define the attributes, slots, methods
+3. Implement the training in R first and then we will use C ++
+(3. Define the functions in C++ for the training system.)
