--- a/ToDo
+++ b/ToDo
@@ -4,4 +4,5 @@ Task in the project elm (S4)
 1. Create the main classes SLFN and ELM
 2. Define the attributes, slots, methods
 3. Implement the training in R first and then we will use C ++
+4. Use RcppEigen to calculate the matrices for the ELM
 (3. Define the functions in C++ for the training system.)
