--- a/ToDo
+++ b/ToDo
@@ -5,4 +5,5 @@ Task in the project elm (S4)
 2. Define the attributes, slots, methods
 3. Implement the training in R first and then we will use C ++
 4. Use RcppEigen to calculate the matrices for the ELM
-(3. Define the functions in C++ for the training system.)
+(5. Define the functions in C++ for the training system.)
+6. Test the speed of inline functions (http://www.cprogramming.com/tutorial/lesson13.html). A priori faster than without...
